# netbox-vcenter-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: icon.png.txt
netbox_vcenter/: __init__.py  client.py  forms.py  navigation.py  urls.py  views.py
netbox_vcenter/api/: __init__.py  urls.py
netbox_vcenter/templates/netbox_vcenter/: compare.html  dashboard.html  device_tab.html  import.html  settings.html  vm_tab.html
netbox_vcenter/templatetags/: vcenter_tags.py
