[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-vcenter-server"
version = "0.4.3"
description = "NetBox plugin for viewing and importing VMs from VMware vCenter servers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "sieteunoseis", email = "jeremy.worden@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["netbox", "netbox-plugin", "vcenter", "vmware", "vsphere"]

dependencies = [
    "pyvmomi>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
]

[project.urls]
Homepage = "https://github.com/sieteunoseis/netbox-vcenter-server"
Repository = "https://github.com/sieteunoseis/netbox-vcenter-server"
Documentation = "https://github.com/sieteunoseis/netbox-vcenter-server/wiki"
Changelog = "https://github.com/sieteunoseis/netbox-vcenter-server/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["netbox_vcenter*"]

[tool.setuptools.package-data]
netbox_vcenter = ["templates/**/*.html"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120
